<resources>
    <string name="app_name">YoMesero Restaurantes</string>

    <string name="hello_world">Bienvenidos a YoMesero</string>
    <string name="action_settings">Settings</string>
    <string name="action_log_out">Cerrar sesión</string>
    <string name="action_create_user">Crear Usuario</string>
    <string name="title_activity_item_form">Crear item</string>
    <string name="item_name_message">Nombre del item</string>
    <string name="item_description_message">Descripción del item</string>
    <string name="item_type_message">Tipo</string>
    <string name="item_time_message">Tiempo de preparación</string>
    <string name="item_price_message">Precio del item</string>
    <string name="create_button">Crear item</string>
    <string name="add_item_button">Agregar item</string>
    <string name="title_activity_display_item">Item Created</string>
    <string name="display_orders">Ver pedidos</string>

    <string name="create_email">Correo electrónico</string>
    <string name="create_password">Contraseña</string>
    <string name="create_password_confirmation">Confirmar contraseña</string>

    <string-array name="types">
        <item>Comida</item>
        <item>Bebida</item>
        <item>Postre</item>
    </string-array>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_display_orders">Lista de pedidos</string>
    <string name="title_activity_order_list">orderList</string>
    <string name="title_activity_show_order">ShowOrderActivity</string>
    <string name="title_activity_create_user">CreateUserActivity</string>

</resources>
