<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.hmkcode.com.yomeserorestaurantes.CreateUserActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/yomesero_logo"
        android:layout_marginBottom="305dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/create_email"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:hint="@string/create_email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/create_password"
        android:layout_below="@+id/create_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/create_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/create_password_confirmation"
        android:layout_below="@+id/create_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/create_password"
        android:layout_alignEnd="@+id/create_password"
        android:hint="@string/create_password_confirmation" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crear cuenta"
        android:id="@+id/create_button"
        android:layout_below="@+id/create_password_confirmation"
        android:layout_marginTop="37dp"
        android:layout_alignRight="@+id/create_password_confirmation"
        android:layout_alignEnd="@+id/create_password_confirmation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#52ACCF"
        android:textColor="#FFFFFF"
        android:onClick="createUser"/>
</RelativeLayout>
